--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+    <div id="cursor"></div>
     <div id="main">
-        
+        <div id="image">
+            <div id="overlay"></div>
+            <img src="https://media.istockphoto.com/id/1987307560/photo/big-data-visualisation-abstract-digital-particles-cyber-network-background-technology-backdrop.webp?s=2048x2048&w=is&k=20&c=s9cG8QycQY-gU2uHv16bMsoBZIVlqLA4C0p7FU-cd9E=" alt="" srcset="">
+        </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="/script.js"></script>
 </body>
 </html>
